[metadata]
name = pycom0com
version = 1.0.0
author = Ezra Morris
description = Python interface and server for com0com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ezramorris/pycom0com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Intended Audience :: Developers

[options]
py_modules = com0com
python_requires = >= 3.5
